Mais no modulo Producao

--- a/templates/Producao/FichaTecnica/form.html.twig
+++ b/templates/Producao/FichaTecnica/form.html.twig
@@ -21,6 +21,10 @@
 				<input type="text" id="confeccao" readonly="readonly" class="form-control" value="{{ confeccao.descricao }}">
 			</div>
 			<div class="col-sm-2 text-right">
+				<button type="button" class="btn btn-warning"
+					onclick="window.location.replace('{{ url('prod_confeccao_form') }}' + '/' + {{ confeccao.id }})">
+					<i class="fas fa-wrench" aria-hidden="true"></i> Editar
+				</button>
 				<button type="button" class="btn btn-secondary"
 					onclick="window.location.replace('{{ url('prod_fichaTecnica_inicial') }}' + '/' + {{ confeccao.id }})">
 					<i class="fas fa-sync" aria-hidden="true"></i> Alternar
