--- a/templates/Producao/confeccaoItemForm.html.twig
+++ b/templates/Producao/confeccaoItemForm.html.twig
@@ -13,6 +13,12 @@
 			<div class="col-8">
 				<h3>Item de Confeccção</h3>
 			</div>
+			<div class="col-4 text-right">
+				<button type="button" class="btn btn-secondary"
+					onclick="window.location.href='{{ url('prod_fichaTecnica_form', {id: confeccaoId}) }}'">
+					<i class="fas fa-sync" aria-hidden="true"></i> Listar
+				</button>
+			</div>
 		</div>
 
 	</div>
