--- a/templates/Financeiro/movimentacaoForm.html.twig
+++ b/templates/Financeiro/movimentacaoForm.html.twig
@@ -86,7 +86,7 @@
 	    	    delay: 250,
 	    	    url: function (params) {
 					console.log(params);
-	    	        return '{{ url('pessoaFindByNome') }}' + '/' + params.term;
+	    	        return '{{ url('bse_pessoa_findByNome') }}' + '/' + params.term;
 	    	    },
 	    	    dataType: 'json',
 	    	    processResults: function (data, params) {
