--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,9 @@
 
 <title>{% block title %}{% endblock %}</title>
 {% block stylesheets %}
+
+<link rel="stylesheet" href="{{ asset('build/app.css') }}">
+
 <link rel="stylesheet" type="text/css" href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}">
 
 <link rel="stylesheet" type="text/css" href="{{ asset('assets/font-awesome/css/fontawesome-all.min.css') }}">
@@ -31,6 +34,9 @@
 {% endblock %}
 
 {% block up_scripts %}
+
+<script src="{{ asset('build/app.js') }}"></script>
+
 <script src="{{ asset('assets/jquery-3.2.1/jquery-3.2.1.min.js') }}"></script>
 <script src="{{ asset('assets/bootstrap/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('assets/jqueryui/jquery-ui.js') }}"></script>
