--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,6 +1,6 @@
 <footer class="app-footer">
 <span class="text-left">
-<a href="https://coreui.io">CoreUI</a> © 2017 creativeLabs.
+<a href="https://coreui.io">CoreUI</a> &copy; 2017 creativeLabs.
 </span>
 <span class="pull-right">
 Powered by <a href="https://coreui.io">CoreUI</a>
