--- a/templates/Financeiro/carteiraForm.html.twig
+++ b/templates/Financeiro/carteiraForm.html.twig
@@ -35,7 +35,7 @@
 		<div class="row">
 			<div class="col text-right">
 				<button type="submit" class="btn btn-primary btn-lg" value="Salvar">
-					<i class="fas fa-save" aria-hidden="true"></i> Salvar
+					<i class="far fa-save" aria-hidden="true"></i> Salvar
 				</button>
 
 				<button type="button" value="Resetar" class="btn btn-secondary"
@@ -68,7 +68,7 @@
 	$('#btnYes').on(
 			'click',
 			function(e) {
-				var $modalDiv = $(e.delegateTarget);
+				var modalDiv = $(e.delegateTarget);
 				var url = $(this).data('url');
 				var form = $('<form></form>').attr("method", "get").attr(
 						"action", url);
