Diversas correções com webpack e NFe funcionando (o faturamento).

--- a/templates/Fiscal/emissaoFiscalPV/formFiscal.html.twig
+++ b/templates/Fiscal/emissaoFiscalPV/formFiscal.html.twig
@@ -73,7 +73,7 @@
 				<button type="button" value="Cancelar" class="btn btn-primary btn-lg"
 					data-form="emissao_fiscal_pv" data-target="#confirmationModal"
 					data-toggle="modal">
-					<i class="fas fa-save" aria-hidden="true"></i> Faturar
+					<i class="fas fa-file-invoice" aria-hidden="true"></i> Faturar
 				</button>
 				
 		{% endif %}
