--- a/templates/Fiscal/emissaoNFe/historicos.html.twig
+++ b/templates/Fiscal/emissaoNFe/historicos.html.twig
@@ -1,4 +1,4 @@
-{% if notaFiscal.historicos %}
+{% if notaFiscal.id and notaFiscal.historicos is not empty %}
 <div class="card">
 	<div class="card-header">
 
