--- a/templates/Financeiro/carteiraForm.html.twig
+++ b/templates/Financeiro/carteiraForm.html.twig
@@ -35,7 +35,7 @@
 		<div class="row">
 			<div class="col text-right">
 				<button type="submit" class="btn btn-primary btn-lg" value="Salvar">
-					<i class="far fa-save" aria-hidden="true"></i> Salvar
+					<i class="fas fa-save" aria-hidden="true"></i> Salvar
 				</button>
 
 				<button type="button" value="Resetar" class="btn btn-secondary"
